<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Student Name TextView -->
    <TextView
        android:id="@+id/studentNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/student_name_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Student Email TextView -->
    <TextView
        android:id="@+id/studentEmailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_email"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/student_email_description"
        app:layout_constraintTop_toBottomOf="@id/studentNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Student Matric Number TextView -->
    <TextView
        android:id="@+id/studentMatricTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/student_matric"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/student_matric_description"
        app:layout_constraintTop_toBottomOf="@id/studentEmailTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView for the Courses the Student is Enrolled in -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/coursesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="yes"
        android:contentDescription="List of courses the student is enrolled in"
        app:layout_constraintTop_toBottomOf="@id/studentMatricTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
