<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Student Name EditText -->
    <EditText
        android:id="@+id/studentNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/student_name_hint"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Student Email EditText -->
    <EditText
        android:id="@+id/studentEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/student_email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/studentNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Student Matric EditText -->
    <EditText
        android:id="@+id/studentMatricEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/student_matric_hint"
        android:inputType="text"
        android:autofillHints="oneTimeCode"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/studentEmailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp" />

    <!-- Add Student Button -->
    <Button
        android:id="@+id/addStudentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_student"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/studentMatricEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
